# wallet-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 95fce5fe44f1_create_wallets_table.py
app/: limiter.py  main.py
app/api/: dependencies.py
app/api/v1/: wallets.py
app/configs/: config.py
app/database/: database.py
app/logger/: config.py
app/models/: wallet.py
app/repositories/: wallet.py
app/schemas/: wallet.py
app/services/: wallet.py
tests/: conftest.py  test_wallets.py
