[tool.pdm]
distribution = true

[project]
name = "test_ITK"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Sagalakov", email = "v.sagalakov@botsarmy.tech"},
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "slowapi==0.1.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
